--- a/templates/home.gohtml
+++ b/templates/home.gohtml
@@ -34,7 +34,7 @@
     </div>
 
     <div class="grid-container">
-        <div class="grid-x grid-padding-x" style="padding-top: 20px">
+        <div class="grid-y grid-padding-y">
             <div class="cell">
                 <h1 class="text-center">Remote Sensing Professionals - Wildfire Mapping Experts</h1>
                 <hr>
@@ -103,13 +103,11 @@
     </div>
 
     <div class="grid-container">
-        <div class="grid-x grid-padding-x">
+        <div class="grid-y grid-padding-y">
             <div class="cell">
                 <h1 class="text-center text-uppercase">The Verimap System Excels In Multiple Mission Profiles</h1>
                 <hr>
             </div>
-        </div>
-        <div class="grid-x grid-padding-x" style="margin-top: 20px; margin-bottom: 20px">
             <div class="cell">
                 <img alt="Industries" src="/dist/images/triangles.png" style="width: 100%">
             </div>
@@ -128,7 +126,7 @@
                     systems, utility corridors, pipeline routes or right of ways. Let us know your needs.</p>
             </div>
         </div>
-        <div class="grid-x grid-padding-x">
+        <div class="grid-x">
             {{ with .read_more }}
                 {{ range $r := . }}
                     <div class="cell large-4 medium-6 readmore_block {{ $r.Key }}">
@@ -152,8 +150,8 @@
         </div>
     </div>
 
-    <div class="grid-container" style="background-color: #DBDBDB">
-        <div class="grid-x grid-padding-x">
+    <div class="grid-container">
+        <div class="grid-x">
             <div class="callout home_foot_box">
                 <h2>Unparalleled Coverage</h2>
                 <p>VeriMap aerial imaging systems are based on proven hybrid sensor technology we
@@ -167,7 +165,7 @@
     </div>
 
     <div class="grid-container" style="margin-bottom: 0; margin-top: 0">
-        <div class="grid-x grid-padding-x" style="margin-bottom: 0; margin-top: 0">
+        <div class="grid-x" style="margin-bottom: 0; margin-top: 0">
             <img alt="Hyper Spectral Water" src="/dist/images/home_footer_12_2.png">
         </div>
     </div>
