--- a/templates/wildfire.gohtml
+++ b/templates/wildfire.gohtml
@@ -4,125 +4,117 @@
     {{template "alert" .alerts}}
 
     <div class="grid-container">
-        <div class="grid-x grid-padding-x">
+        <div class="grid-y grid-padding-y">
             <div class="cell">
                 <p>What places us firmly at the head of the competition is that we are able to operate both at night and
                     in the day-time with our thermal imaging system. 100,000 ha/hour at 4000ft AGL with sidelap
                     (190724_yyc_ir, 40cm EGD). Our MMT new technology means that we are able to map faster and more
                     accurately, thus reducing both flight time and costs.</p>
             </div>
-        </div>
-    </div>
-
-    <div class="grid-container">
-        <div class="grid-x grid-padding-x">
             <div class="cell text-center">
-                <h3 class="font_med">Flight Mission Solutions</h3>
+                <h1 class="font_med">Flight Mission Solutions</h1>
             </div>
-        </div>
-
-        <hr>
-        <br>
-
-        <div class="grid-x grid-padding-x bottom_spacer">
-            <div class="cell large-4">
-                <div class="grid-x">
-                    <div class="cell  text-center">
-                        <a href="#" class="button small gradient_bg font_bold" style="width: 100%">Large Area Survey</a>
-                    </div>
-                    <div class="cell">
-                        <img alt="Large Area Survey" src="/dist/images/wms_1.png">
+            <div class="grid-x grid-padding-x">
+                <div class="cell large-4">
+                    <div class="grid-x">
+                        <div class="cell  text-center">
+                            <a href="#" class="button small gradient_bg font_bold" style="width: 100%">Large Area
+                                Survey</a>
+                        </div>
+                        <div class="cell">
+                            <img alt="Large Area Survey" src="/dist/images/wms_1.png">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="cell large-8">
-                <h6 class=" font_bold">High speed – High Altitude flyover up to 150,000ha / hour fire area.</h6>
-                <ul>
-                    <li>Effective flight altitudes between 3,500 and 15,000ft AGL</li>
-                    <li>Rapid image acquisition</li>
-                    <li>Minimum 30% by 50% image overlap for greater reliability</li>
-                    <li>Day and night capture, overnight recommended for optimal sensitivity to smouldering fire</li>
-                    <li>Sub-meter image resolution</li>
-                    <li>On-board image orthorectification and processing</li>
-                </ul>
-            </div>
-        </div>
-
-
-        <div class="grid-x grid-padding-x bottom_spacer">
-            <div class="cell large-4">
-                <div class="grid-x">
-                    <div class="cell  text-center">
-                        <a href="#" class="button small gradient_bg font_bold" style="width: 100%">Hotspotting</a>
-                    </div>
-                    <div class="cell align-center">
-                        <img alt="Hotspotting" src="/dist/images/wms_2.png">
-                    </div>
+                <div class="cell large-8">
+                    <h6 class=" font_bold">High speed – High Altitude flyover up to 150,000ha / hour fire area.</h6>
+                    <ul>
+                        <li>Effective flight altitudes between 3,500 and 15,000ft AGL</li>
+                        <li>Rapid image acquisition</li>
+                        <li>Minimum 30% by 50% image overlap for greater reliability</li>
+                        <li>Day and night capture, overnight recommended for optimal sensitivity to smouldering fire
+                        </li>
+                        <li>Sub-meter image resolution</li>
+                        <li>On-board image orthorectification and processing</li>
+                    </ul>
                 </div>
             </div>
-            <div class="cell large-8">
-                <h6 class=" font_bold">High speed – Low Altitude flyover of critical areas for detailed hotspot
-                    discovery.</h6>
-                <ul>
-                    <li>Accuracy to within 1.0m</li>
-                    <li>Real-time ortho-processing</li>
-                    <li>Instant hotspot classification</li>
-                    <li>Multiple flight altitudes for optimal sensitivity</li>
-                    <li>Location delivery direct to Fire Unit Planning Chief and Firefighters via mobile apps</li>
-                </ul>
-            </div>
-        </div>
 
-        <div class="grid-x grid-padding-x bottom_spacer">
-            <div class="cell large-4">
-                <div class="grid-x">
-                    <div class="cell  text-center">
-                        <a href="#" class="button small gradient_bg font_bold" style="width: 100%">Perimeter Mapping</a>
-                    </div>
-                    <div class="cell align-center">
-                        <img alt="Perimeter Mapping" src="/dist/images/wms_3.png">
+            <div class="grid-x grid-padding-x">
+                <div class="cell large-4">
+                    <div class="grid-x">
+                        <div class="cell  text-center">
+                            <a href="#" class="button small gradient_bg font_bold" style="width: 100%">Hotspotting</a>
+                        </div>
+                        <div class="cell align-center">
+                            <img alt="Hotspotting" src="/dist/images/wms_2.png">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="cell large-8">
-                <h6 class=" font_bold">Capture and update of perimeter for better planning.</h6>
-                <ul>
-                    <li>Mission to mission change analysis</li>
-                    <li>Automated path tracking for accurate capture</li>
-                    <li>Consultation for predesignated priority areas</li>
-                    <li>Custom flight lines for perimeter only</li>
-                </ul>
-            </div>
-        </div>
-
-
-        <div class="grid-x grid-padding-x bottom_spacer">
-            <div class="cell large-4">
-                <div class="grid-x">
-                    <div class="cell  text-center">
-                        <a href="#" class="button small gradient_bg font_bold" style="width: 100%">ROW & Corridor
-                            Tracking</a>
-                    </div>
-                    <div class="cell align-center">
-                        <img alt="ROW & Corridor Tracking" src="/dist/images/wms_4.png">
-                    </div>
+                <div class="cell large-8">
+                    <h6 class=" font_bold">High speed – Low Altitude flyover of critical areas for detailed hotspot
+                        discovery.</h6>
+                    <ul>
+                        <li>Accuracy to within 1.0m</li>
+                        <li>Real-time ortho-processing</li>
+                        <li>Instant hotspot classification</li>
+                        <li>Multiple flight altitudes for optimal sensitivity</li>
+                        <li>Location delivery direct to Fire Unit Planning Chief and Firefighters via mobile apps</li>
+                    </ul>
                 </div>
             </div>
-            <div class="cell large-8">
-                <h6 class=" font_bold">High precision high resolution flight following pre-planned GPS vector over road,
-                    rail, utility corridor, & pipeline right of ways.
-                </h6>
-                <ul>
-                    <li>Low Altitude flyover of critical areas for detailed hotspot discovery.</li>
-                    <li>In-Burn and Post-Burn capture capability, condition dependent</li>
-                    <li>Day or night flights</li>
-                    <li>Real-time ortho-processing</li>
-                    <li>Automatic, real-time, adjustable classification</li>
-                    <li>Multiple flight altitudes for optimal sensitivity</li>
-                </ul>
+
+            <div class="grid-x grid-padding-x">
+                <div class="cell large-4">
+                    <div class="grid-x">
+                        <div class="cell  text-center">
+                            <a href="#" class="button small gradient_bg font_bold" style="width: 100%">Perimeter
+                                Mapping</a>
+                        </div>
+                        <div class="cell align-center">
+                            <img alt="Perimeter Mapping" src="/dist/images/wms_3.png">
+                        </div>
+                    </div>
+                </div>
+                <div class="cell large-8">
+                    <h6 class=" font_bold">Capture and update of perimeter for better planning.</h6>
+                    <ul>
+                        <li>Mission to mission change analysis</li>
+                        <li>Automated path tracking for accurate capture</li>
+                        <li>Consultation for predesignated priority areas</li>
+                        <li>Custom flight lines for perimeter only</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="grid-x grid-padding-x">
+                <div class="cell large-4">
+                    <div class="grid-x">
+                        <div class="cell  text-center">
+                            <a href="#" class="button small gradient_bg font_bold" style="width: 100%">ROW & Corridor
+                                Tracking</a>
+                        </div>
+                        <div class="cell align-center">
+                            <img alt="ROW & Corridor Tracking" src="/dist/images/wms_4.png">
+                        </div>
+                    </div>
+                </div>
+                <div class="cell large-8">
+                    <h6 class=" font_bold">High precision high resolution flight following pre-planned GPS vector over
+                        road,
+                        rail, utility corridor, & pipeline right of ways.
+                    </h6>
+                    <ul>
+                        <li>Low Altitude flyover of critical areas for detailed hotspot discovery.</li>
+                        <li>In-Burn and Post-Burn capture capability, condition dependent</li>
+                        <li>Day or night flights</li>
+                        <li>Real-time ortho-processing</li>
+                        <li>Automatic, real-time, adjustable classification</li>
+                        <li>Multiple flight altitudes for optimal sensitivity</li>
+                    </ul>
+                </div>
             </div>
         </div>
-
     </div>
 {{end}}
 
