--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -99,30 +99,22 @@
 
 .header_box {
     .shaded {
-        background-color: rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.5);
     }
-
     margin-bottom: 2rem;
-    height: 200px;
-
-    nav {
-        margin-left: 1.1rem;
-    }
 
     .header_content {
-
+        background-color: rgba(0, 0, 0, 0.7);
         a, h1, span {
             color: $white;
         }
 
         h1 {
-            text-align: left;
-            padding-left: 2rem;
-            color: $white;
+            font-weight: 700;
         }
 
         a {
-            font-weight: 500;
+            font-weight: 700;
 
             &:hover {
                 color: $base_yellow;
@@ -366,10 +358,18 @@ ul.dash > li:before {
     }
 }
 
-.bottom_spacer {
-    margin-bottom: 1rem;
-}
-
 h1, h2, h3, h4, h5, h6 {
     color: #111111;
+}
+
+.person_card {
+    background-color: darken($body-background, 5%);
+    h2 {
+        background-color: darken($body-background, 15%);
+        margin: 0;
+        padding: 0.2em;
+    }
+    p {
+        padding: 0.2em
+    }
 }
