--- a/templates/connect.gohtml
+++ b/templates/connect.gohtml
@@ -8,7 +8,7 @@
             <div class="cell large-4 medium-4">
                 <div class="grid-x grid-padding-x">
                     <div class="cell large-2">
-                        {{ icon "fi-marker icon_lg" }}">
+                        {{ icon "fi-marker icon_lg" }}
                     </div>
                     <div class="cell large-10">
                         <h4>Mail</h4>
@@ -21,7 +21,7 @@
             <div class="cell large-4 medium-4">
                 <div class="grid-x grid-padding-x">
                     <div class="cell large-2">
-                        {{ icon "fi-telephone icon_lg" }}">
+                        {{ icon "fi-telephone icon_lg" }}
                     </div>
                     <div class="cell large-10">
                         <h4>Phone</h4>
@@ -32,7 +32,7 @@
             <div class="cell large-4 medium-4">
                 <div class="grid-x grid-padding-x">
                     <div class="cell large-2">
-                        {{ icon "fi-mail icon_lg" }}">
+                        {{ icon "fi-mail icon_lg" }}
                     </div>
                     <div class="cell large-10">
                         <h4>Email</h4>
@@ -42,40 +42,40 @@
             </div>
         </div>
         <hr>
-        <div class="grid-x grid-padding-x align-center">
-            <div class="cell small-12 ">
-                <h4 class="text-center">Send A Message</h4>
-                <form>
-                    <div class="grid-x grid-padding-x">
-                        <div class="medium-6 cell">
-                            <label>Name
-                                <input type="text" placeholder="Name">
-                            </label>
+        <form action="/connect/send" method="post" enctype="multipart/form-data">
+            <div class="grid-x grid-padding-x align-center">
+                <div class="cell medium-6 small-12 ">
+                    <h1 class="text-center">Send A Message</h1>
+                    <form>
+                        <div class="grid-x grid-padding-x">
+                            <div class="medium-6 cell">
+                                <label>Name
+                                    <input type="text" placeholder="Name" name="name">
+                                </label>
+                            </div>
+                            <div class="medium-6 cell">
+                                <label>Email
+                                    <input type="email" placeholder="Email" name="email">
+                                </label>
+                            </div>
+                            <div class="cell">
+                                <label>Subject
+                                    <input type="text" placeholder="Subject" name="subject">
+                                </label>
+                            </div>
+                            <div class="cell">
+                                <label>Message
+                                    <textarea placeholder="Enter your message" style="min-height: 300px" name="body"></textarea>
+                                </label>
+                            </div>
+                            <div class="cell">
+                                <input type="submit" class="button large expanded" value="Send Message"/>
+                            </div>
                         </div>
-                        <div class="medium-6 cell">
-                            <label>Email
-                                <input type="email" placeholder="Email">
-                            </label>
-                        </div>
-                        <div class="cell">
-                            <label>Subject
-                                <input type="email" placeholder="Subject">
-                            </label>
-                        </div>
-                        <div class="cell">
-                            <label>Message
-                                <textarea placeholder="Enter your message" style="min-height: 300px"></textarea>
-                            </label>
-                        </div>
-                        <div class="cell">
-                            <a class="button secondary expanded">{{ icon "fi-mail icon_pad_right" }}"><i
-                                        class=""></i><strong>Send
-                                    Message</strong></a>
-                        </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
-        </div>
+        </form>
     </div>
     <div class="grid-x">
         <div class="cell">
