--- a/templates/emergency.gohtml
+++ b/templates/emergency.gohtml
@@ -21,7 +21,7 @@
             </div>
         </div>
 
-        <div class="grid-x grid-padding-x">
+        <div class="grid-y grid-padding-y">
             <div class="cell">
                 <h2>Flood and Storm Response</h2>
                 <p>VeriMap specializes in Airborne Thermal Mapping and Digital Remote Sensing to
