--- a/templates/logout.gohtml
+++ b/templates/logout.gohtml
@@ -8,7 +8,7 @@
             <div class="cell">
                 <h2>User Logout</h2>
                 <p>To logout of your current session press the button below.</p>
-                <a href=""
+                <a href=""></a>
             </div>
         </div>
     </div>
