--- a/templates/background.gohtml
+++ b/templates/background.gohtml
@@ -5,7 +5,7 @@
         </div>
         <img src="https://get.foundation/sites/docs/assets/img/generic/rectangle-1.jpg">
         <div class="card-section" style="padding-top:0; padding-left: 0; padding-right: 0">
-            <h2 style="background-color: ">{{ .Name }}, {{ .Credentials }}</h2>
+            <h2>{{ .Name }}, {{ .Credentials }}</h2>
             {{if ne "" .Email}}
                 <p><a href="mailto:{{.Email}}">{{ icon "fi-mail" }} {{ .Email }}</a></p>
                 {{end}}
