--- a/templates/layouts/layout.gohtml
+++ b/templates/layouts/layout.gohtml
@@ -63,7 +63,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Verimap Plus Inc. - {{ template "title" }}</title>
         <link rel="icon" type="image/png" href="/dist/images/logo_sm.png"/>
-        <link rel="stylesheet" href="/dist/main.css"/>
+        <link rel="stylesheet" href="/dist/index.css"/>
     </head>
     <body>
     <div class="grid-x">
@@ -227,8 +227,8 @@
         </div>
     </div>
 
-    <script src="/dist/main.bundle.js"></script>
-
+{{/*    <script src="/dist/main.bundle.js"></script>*/}}
+    <script src="/dist/index.js"></script>
     </body>
     </html>
 
