--- a/frontend/src/scss/_icons.scss
+++ b/frontend/src/scss/_icons.scss
@@ -1,10 +1,10 @@
 @font-face {
     font-family: "foundation-icons";
-    src: url("/dist/fonts/foundation-icons.eot");
-    src: url("/dist/fonts/foundation-icons.eot?#iefix") format("embedded-opentype"),
-    url("/dist/fonts/foundation-icons.woff") format("woff"),
-    url("/dist/fonts/foundation-icons.ttf") format("truetype"),
-    url("/dist/fonts/foundation-icons.svg#fontcustom") format("svg");
+    src: url("../public/fonts/foundation-icons.eot");
+    src: url("../public/fonts/foundation-icons.eot?#iefix") format("embedded-opentype"),
+    url("../public/fonts/foundation-icons.woff") format("woff"),
+    url("../public/fonts/foundation-icons.ttf") format("truetype"),
+    url("../public/fonts/foundation-icons.svg#fontcustom") format("svg");
     font-weight: normal;
     font-style: normal;
 }
